Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: TypeScript
 description: TypeScript is a superset of JavaScript that compiles to clean JavaScript output.
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-hacker
 
 gems:
   - jekyll-mentions
